objects/ASI_CRM_Voucher__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Vouchers</relationshipLabel>
        <relationshipName>Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GL_Date__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Generation_Reference_Date__c</fullName>
        <label>Generation Reference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Is_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Issued?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <label>Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Notify_Voucher_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS Notify Voucher Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Generated_Msg__c</fullName>
        <label>System Generated Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Voucher_Value__c</fullName>
        <label>Total Voucher Value</label>
        <summarizedField>ASI_CRM_Voucher_Detail__c.ASI_CRM_Total_Voucher_Value__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Voucher_Detail__c.ASI_CRM_Voucher_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Voucher</label>
    <listViews>
        <fullName>ASI_CRM_SG_Voucher</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_GL_Date__c</columns>
        <columns>ASI_CRM_System_Generated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Voucher__c.ASI_CRM_SG_Voucher</value>
        </filters>
        <label>All SG Voucher</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Voucher No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vouchers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Voucher</fullName>
        <active>true</active>
        <label>SG Voucher</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>